--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@
     </main>
 </body>
 </html>
-<!---->Major help from: https://codepen.io/alperentalaslioglu/pen/yPGgvP-->
+<!--Major help from: https://codepen.io/alperentalaslioglu/pen/yPGgvP-->
